<resources>
    <string name="app_name" translatable="false">ZenPlet</string>
    <string name="splash_logo_image_description">ZenPlet Logo Image</string>
    <string name="splash_app_name_image_description">ZenPlet App Name Image</string>
    <string name="splash_tag_line_image_description">ZenPlet Tag line Image</string>
    <string name="menu_welcome">Welcome!</string>
    <string name="menu_welcome_info">Before start using the app you need to have an account.</string>
    <string name="sign_up_button">Sign up</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_in_fb_or_google">Sign in with <b>Facebook</b> or <b>Google</b></string>
    <string name="logo_description">ZenPlet Logo</string>
    <string name="appname_description" translatable="false">ZENPLET</string>
    <string name="already_have_account">Already have an account? <b>Log in</b></string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="Password">Password:</string>
    <string name="no_have_account">Don\'t have an account? <b>Sign Up</b></string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="username_or_email">Username or Email</string>
    <string name="my_pets_title">MY PETS</string>
    <string name="old_password">Old password:</string>
    <string name="new_password">New password:</string>
    <string name="repeat_password">Repeat new password:</string>
    <string name="account">ACCOUNT</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_bottom_nav">MainActivity</string>
    <string name="day">Day(s)</string>
    <string name="month">Month(s)</string>
    <string name="year">Year(s)</string>
    <string name="StringName">Name</string>
    <string name="StringDate">Date</string>
    <string name="StringNext">Next:</string>
    <string name="StringDates">Date:</string>
    <string name="StringDescription">Description:</string>
    <string name="StrngNameVaccine">Name:</string>
    <string name="StringNewDate">Date:</string>
    <string name="StringNextSinDosPuntos">Next</string>
    <string name="StringDescriptionSinDosPuntos">Description</string>
    <string name="StringSaveVaccine">Save Vaccine</string>
    <string name="StringDeleteVaccine">Delete Vaccine</string>
    <string name="search_text">Search</string>
    <string name="publish_rules">To publish your pet as lost you need to include additional information such as: place where it was last seen, details of your pet, or if you did not configure your phone number, it is advisable to provide contact information.</string>
    <string name="additional_info_text">Additional Info:</string>
    <string name="additional_info">Additional Info…</string>
    <string name="publish_text">Publish</string>
    <string name="save_text">Save</string>
    <string name="pet_found_text">Pet Found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="lost">Lost</string>
    <string name="view_pet_owners">View Pet Owner</string>
    <string name="add_pet_owners">Add Pet Owners</string>
    <string name="abrir_galeria">Open Gallery</string>
    <string name="abrir_camara">Open Camera</string>
    <string name="hint_name">Name</string>
    <string name="name">Name:</string>
    <string name="hint_genre">Genre</string>
    <string name="genre">Genre:</string>
    <string name="size">Size:</string>
    <string name="hint_size">Size</string>
    <string name="breed">Breed:</string>
    <string name="hint_breed">Breed</string>
    <string name="birthdate">Birthdate:</string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="create_pet">Create Pet</string>
    <string name="StrgNumberTelephone">Phone Number</string>
    <string name="save">Save</string>
    <string name="StringTituloPetOwner">Add the owner\'s email</string>
    <string name="btnOk">Accept</string>
    <string name="btnCancelar">Cancel</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZG9ybWFtdWQwMyIsImEiOiJja243djU4YzgwcmZ3Mm9xbmpsc2pnc2FsIn0.eZI3kr1WDuRrtuhP5ZgDhQ</string>
    <string name="StrVaccineForPet">Vaccine For:</string>
    <string name="pet_image">Pet Image</string>
    <string name="last_location">Last Location:</string>
    <string name="StrgInfoLostPet">Info:</string>
    <string name="StringBtnInfo">Back</string>
    <string name="line2">line2</string>
    <string name="linea">line</string>
    <string name="delete_account">Delete Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="toast_cannot_be_changed">The data is the same and cannot be changed</string>
    <string name="toast_successfully_saved_changes">Successfully saved changes</string>
    <string name="dialog_are_you_sure_remove">Are you sure to remove this Account</string>
    <string name="toas_successfully_delete">Successfully delete</string>
    <string name="toast_changed_password_successfully">Changed password successfully</string>
    <string name="toast_new_passwords_do_not_match">New passwords do not match</string>
    <string name="toast_the_password_is_not_correct">The password is not correct</string>
    <string name="toast_Lost_Pet_Updated">Lost Pet Updated</string>
    <string name="toast_Error_updating_lost_petd">Error updating lost pet</string>
    <string name="toast_We_are_happy_to_help_you_to_find_your_pet">We are happy to help you to find your pet.</string>
    <string name="toast_The_data_has_been_updated_successfully">The data has been updated successfully</string>
    <string name="dialog_Important">Important</string>
    <string name="dialog_Are_you_sure_to_remove_this_pet">Are you sure to remove this pet?</string>
    <string name="option_yes">Yes</string>
    <string name="toast_updated_pet">Updated Pet</string>
    <string name="toast_Select_the_app">Select the app</string>
    <string name="toast_An_error_has_been_ocurred_while_saving_lost_pet">An error has been ocurred while saving lost pet</string>
    <string name="toast_The_data_has_been_save_successfully">The data has been save successfully</string>
    <string name="toast_The_vaccine_has_been_updated_successfully">The vaccine has been updated successfully</string>
    <string name="dialog_This_user_is_not_registered">This user is not registered</string>
    <string name="stringFemaleRatio">Female</string>
    <string name="stringMaleRatio">Male</string>
    <string-array name="Size">
        <item>small breed</item>
        <item>medium breed</item>
        <item>large breed</item>
        <item>giant breed</item>
    </string-array>
    <string name="toast_you_must_complete_the_fields">You must complete all fields</string>
    <string name="LostPets">Lost Pets</string>
    <string name="Health">Health</string>
    <string name="Pets">Pets</string>
    <string name="Account">Account</string>
    <string name="Text_pets_found_using_our_app.">pets found using our app.</string>
    <string name="invalid_name">Enter only characters. Minimum 3 characters and maximum 30</string>
    <string name="invalid_username">Enter numbers, characters, or _. Minimum 3 characters and maximum 30</string>
    <string name="invalid_email">Email incorrect</string>
    <string name="invalid_phone">Enter only numbers. Minimum 4 digits and maximum 15</string>
    <string name="invalid_login"> Incorrect email or username</string>
    <string name="invalid_info"> Enter only caracters. Minimum 10 characters and maximum 300</string>
    <string name="invalid_date"> The date is not indicated</string>
    <string name="invalid_password"> The password must be between 8 and 16 characters long, at least one digit, at least one lowercase and at least one uppercase.</string>
</resources>
