<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground"
    tools:context=".ui.vaccines.EditVaccines">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StrngNameVaccine"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_name_vaccines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/ptsans"
                android:hint="@string/StringName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#99363537" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringDates"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_date_vaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/StringDate"
                android:importantForAutofill="no"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringNext"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_next_vaccines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/ptsans"
                android:hint="@string/StringNextSinDosPuntos"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#99363537" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringDescription"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_description_vaccines"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/StringDescriptionSinDosPuntos"
                android:importantForAutofill="no"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StrVaccineForPet"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/VaccineePetLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:fontFamily="@font/ptsans"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/saveVaccine"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_button"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringSaveVaccine"
                android:textColor="@color/colorLightBackground"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteVaccine"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimaryRed"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringDeleteVaccine"
                android:textColor="@color/colorLightBackground"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>