<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground"
    tools:context=".ui.vaccines.NewVaccines" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StrngNameVaccine"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/new_name_vaccines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/ptsans"
                android:hint="@string/StringName"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#99363537" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringDates"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/new_date_vaccine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/StringDate"
                android:inputType="date" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringNext"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/new_next_vaccines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:fontFamily="@font/ptsans"
                android:hint="@string/StringNextSinDosPuntos"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#99363537" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringDescription"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/new_description_vaccines"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/StringDescriptionSinDosPuntos"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/StrVaccineForPet"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerVaccinesForPet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="25dp" />

            <Button
                android:id="@+id/buttonSaveVaccines"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/ic_button"
                android:fontFamily="@font/ptsans"
                android:text="@string/StringSaveVaccine"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>