<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBackground"
    tools:context=".ui.LogInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_logo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="80dp"
                android:contentDescription="@string/logo_description"
                app:srcCompat="@drawable/ic_logo" />

            <ImageView
                android:id="@+id/img_appname_login"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="80dp"
                android:contentDescription="@string/appname_description"
                app:srcCompat="@drawable/ic_app_name" />

            <EditText
                android:id="@+id/edit_name_from_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/ptsans"
                android:hint="@string/username_or_email"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="?android:attr/textColorHighlight"
                android:textColorHint="#99363537" />

            <EditText
                android:id="@+id/edit_password_from_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ems="10"
                android:fontFamily="@font/ptsans"
                android:hint="@string/Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHighlight="?android:attr/textColorHighlight"
                android:textColorHint="#99363537" />

            <TextView
                android:id="@+id/text_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="80dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/forgot_password"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:fontFamily="@font/ptsans"
                android:onClick="getLogin"
                android:text="@string/log_in_button"
                android:textAllCaps="false"
                android:textColor="@color/colorLightBackground"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/ptsans"
                android:text="@string/no_have_account"
                android:textAlignment="textEnd"
                android:textColor="@color/colorPrimaryDark" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>